--- a/compose.yaml
+++ b/compose.yaml
@@ -1,7 +1,7 @@
 
 services:
   unifi-route53-updater:
-    image: "unifi-route53-dns:latest"
+    image: "ghcr.io/borzilleri/unifi-route53-dns:latest"
     ports:
       - 8080:8080
     environment:
