Add pushover notification support
Sends pushover notification when a host's IP has been updated.
* On successful update, only a single notification will be sent for the
  primary hostname
* Any Any/All update failures will generate a notification.

--- a/config.template.yaml
+++ b/config.template.yaml
@@ -9,3 +9,7 @@ records:
     # that should also be updated as well.
     additionalHosts:
       - "additional-host.your-hostname.net"
+
+pushover:
+  api-token: "pushover-app-api-token"
+  user-key: "your-pushover-user-key"
